[gd_scene load_steps=12 format=3 uid="uid://bvmb7nr5tw318"]

[ext_resource type="PackedScene" uid="uid://r7jbtdsm0aqs" path="res://player.tscn" id="1_0ur0a"]
[ext_resource type="Script" path="res://game.gd" id="1_xpau8"]
[ext_resource type="Texture2D" uid="uid://u65sqcjwpwlq" path="res://world_tileset.png" id="2_lan2u"]
[ext_resource type="PackedScene" uid="uid://d1pv8swpk38wt" path="res://coin.tscn" id="3_25pjb"]
[ext_resource type="AudioStream" uid="uid://dk14gob47v6ia" path="res://gameover.wav" id="6_oo1bl"]

[sub_resource type="Gradient" id="Gradient_77uum"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8nla8"]
gradient = SubResource("Gradient_77uum")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ssb7"]
size = Vector2(1151, 32.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_smnex"]
texture = ExtResource("2_lan2u")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_n1kep"]
sources/0 = SubResource("TileSetAtlasSource_smnex")

[sub_resource type="LabelSettings" id="LabelSettings_rry8d"]
font_size = 24

[node name="Game" type="Node2D"]
script = ExtResource("1_xpau8")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 326)
scale = Vector2(17.9688, 9.84375)
texture = SubResource("GradientTexture2D_8nla8")

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_0ur0a")]
position = Vector2(-174, 382)
disable_mode = 2

[node name="Floor" type="Area2D" parent="." groups=["floor"]]
position = Vector2(8, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(567.5, 630.75)
shape = SubResource("RectangleShape2D_2ssb7")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(63, 566)
tile_set = SubResource("TileSet_n1kep")
format = 2
layer_0/tile_data = PackedInt32Array(327677, 393216, 1, 327678, 393216, 1, 327679, 393216, 1, 262144, 393216, 1, 262145, 393216, 1, 262146, 393216, 1, 262147, 393216, 1, 262148, 393216, 1, 262150, 393216, 1, 262149, 393216, 1, 262151, 393216, 1, 262152, 393216, 1, 262153, 393216, 1, 262154, 393216, 1, 262156, 393216, 1, 262157, 393216, 1, 262155, 393216, 1, 262158, 393216, 1, 262159, 393216, 1, 262160, 393216, 1, 262161, 393216, 1, 262162, 393216, 1, 262164, 393216, 1, 262163, 393216, 1, 262165, 393216, 1, 262167, 393216, 1, 262166, 393216, 1, 262168, 393216, 1, 262169, 393216, 1, 262170, 393216, 1, 262172, 393216, 1, 262171, 393216, 1, 262173, 393216, 1, 262174, 393216, 1, 262175, 393216, 1, 262176, 393216, 1, 262177, 393216, 1, 262179, 393216, 1, 262178, 393216, 1, 262180, 393216, 1, 262181, 393216, 1, 262182, 393216, 1, 262184, 393216, 1, 262183, 393216, 1, 262185, 393216, 1, 262186, 393216, 1, 262187, 393216, 1, 262188, 393216, 1, 262189, 393216, 1, 262190, 393216, 1, 262191, 393216, 1, 262192, 393216, 1, 262193, 393216, 1, 262194, 393216, 1, 262195, 393216, 1, 262196, 393216, 1, 262197, 393216, 1, 262198, 393216, 1, 262199, 393216, 1, 262200, 393216, 1, 262201, 393216, 1, 262202, 393216, 1, 262203, 393216, 1, 262204, 393216, 1, 262206, 393216, 1, 262205, 393216, 1, 262207, 393216, 1, 262208, 393216, 1, 262209, 393216, 1, 262210, 393216, 1, 262211, 393216, 1, 327676, 393216, 1, 262140, 393216, 1, 262141, 393216, 1, 262142, 393216, 1, 262143, 393216, 1, 196608, 393216, 1, 196609, 393216, 1, 196610, 393216, 1, 196611, 393216, 1, 196612, 393216, 1, 196613, 393216, 1, 196614, 393216, 1, 196615, 393216, 1, 196616, 393216, 1, 196617, 393216, 1, 196618, 393216, 1, 196619, 393216, 1, 196620, 393216, 1, 196621, 393216, 1, 196622, 393216, 1, 196623, 393216, 1, 196624, 393216, 1, 196625, 393216, 1, 196626, 393216, 1, 196627, 393216, 1, 196628, 393216, 1, 196629, 393216, 1, 196630, 393216, 1, 196631, 393216, 1, 196632, 393216, 1, 196633, 393216, 1, 196634, 393216, 1, 196635, 393216, 1, 196636, 393216, 1, 196637, 393216, 1, 196638, 393216, 1, 196639, 393216, 1, 196640, 393216, 1, 196641, 393216, 1, 196642, 393216, 1, 196643, 393216, 1, 196644, 393216, 1, 196645, 393216, 1, 196646, 393216, 1, 196647, 393216, 1, 196648, 393216, 1, 196649, 393216, 1, 196650, 393216, 1, 196651, 393216, 1, 196652, 393216, 1, 196653, 393216, 1, 196655, 393216, 1, 196654, 393216, 1, 196656, 393216, 1, 196657, 393216, 1, 196658, 393216, 1, 196659, 393216, 1, 196660, 393216, 1, 196661, 393216, 1, 196662, 393216, 1, 196663, 393216, 1, 196664, 393216, 1, 196665, 393216, 1, 196666, 393216, 1, 196667, 393216, 1, 196668, 393216, 1, 196669, 393216, 1, 196670, 393216, 1, 196671, 393216, 1, 196672, 393216, 1, 196673, 393216, 1, 196674, 393216, 1, 196675, 393216, 1)

[node name="Coin" parent="." instance=ExtResource("3_25pjb")]
position = Vector2(461, -78)

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_oo1bl")
volume_db = 8.0

[node name="Label" type="Label" parent="."]
offset_left = 14.0
offset_top = 24.0
offset_right = 57.0
offset_bottom = 47.0
text = "Score"
label_settings = SubResource("LabelSettings_rry8d")

[connection signal="coin_collected" from="Coin" to="." method="_on_coin_coin_collected"]
[connection signal="coin_missed" from="Coin" to="." method="_on_coin_coin_missed"]
